--- a/index.css
+++ b/index.css
@@ -6,6 +6,7 @@ body{
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    background-color: black;
     color: aliceblue;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
@@ -53,7 +54,7 @@ main{
 }
 .player{
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     align-items: center;
     justify-content: space-around;
     column-gap: 5rem;
@@ -63,10 +64,10 @@ main{
     font-size: 2rem;
     font-weight: 700;
 }
-.play:nth-child(even){
+.play:nth-child(1){
     color: rgb(255, 0, 0);
 }
-.play:nth-child(odd){
+.play:nth-child(3){
     color: rgb(0, 76, 255);
 }
 .box:nth-child(even){
@@ -74,6 +75,12 @@ main{
 }
 .box:nth-child(odd){
     background-color: rgba(125, 122, 122, 0.877);
+}
+.box.active{
+    background-color: aliceblue;
+}
+.box.tied{
+    background-color: rgb(100, 100, 100);
 }
 .restart{
     margin: 3rem;
